refactor: if문 -> switch 수정 및 tolist수정